{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 222,
  "lineage": "8618c63b-bd13-246d-60b7-9ac027201710",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb_target_group_attachment",
      "name": "Altschool-target-group-attachment1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:811661698453:targetgroup/Altschool-target-group/80514535078abe3d-20230204061442234900000005",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:811661698453:targetgroup/Altschool-target-group/80514535078abe3d",
            "target_id": "i-043b60b1ce78e0e41"
          },
          "dependencies": [
            "aws_instance.Altschool1",
            "aws_lb_target_group.Altschool-target-group",
            "aws_security_group.Altschool-load_balancer_sg",
            "aws_security_group.Altschool-security-grp-rule",
            "aws_subnet.Altsch-public-subnet1",
            "aws_vpc.vpc-prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Altschool1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00874d747dde814fa",
            "arn": "arn:aws:ec2:us-east-1:811661698453:instance/i-043b60b1ce78e0e41",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-043b60b1ce78e0e41",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "main-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-02e2e44cb3950558f",
            "private_dns": "ip-10-0-1-238.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.238",
            "public_dns": "ec2-3-89-88-195.compute-1.amazonaws.com",
            "public_ip": "3.89.88.195",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-07ca7f5495292c614",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-000f471ebc84ca1e7"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09f16c4dfad403c7f",
            "tags": {
              "Name": "Altschool-1",
              "source": "terraform"
            },
            "tags_all": {
              "Name": "Altschool-1",
              "source": "terraform"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-000f471ebc84ca1e7"
            ]
          },
          "dependencies": [
            "aws_security_group.Altschool-load_balancer_sg",
            "aws_security_group.Altschool-security-grp-rule",
            "aws_subnet.Altsch-public-subnet1",
            "aws_vpc.vpc-prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Altschool2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00874d747dde814fa",
            "arn": "arn:aws:ec2:us-east-1:811661698453:instance/i-0abdf11b3314947f2",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0abdf11b3314947f2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "main-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-060ae408774a5dfdc",
            "private_dns": "ip-10-0-2-238.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.238",
            "public_dns": "ec2-54-242-146-40.compute-1.amazonaws.com",
            "public_ip": "54.242.146.40",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-008964bd6fb27f486",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-000f471ebc84ca1e7"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ad98116134951e33",
            "tags": {
              "Name": "Altschool-2",
              "source": "terraform"
            },
            "tags_all": {
              "Name": "Altschool-2",
              "source": "terraform"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-000f471ebc84ca1e7"
            ]
          },
          "dependencies": [
            "aws_security_group.Altschool-load_balancer_sg",
            "aws_security_group.Altschool-security-grp-rule",
            "aws_subnet.Altsch-public-subnet2",
            "aws_vpc.vpc-prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Altschool3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00874d747dde814fa",
            "arn": "arn:aws:ec2:us-east-1:811661698453:instance/i-0b8b07064c1ba4f2c",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b8b07064c1ba4f2c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "main-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-05cf6d3db9441a95b",
            "private_dns": "ip-10-0-1-57.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.57",
            "public_dns": "ec2-3-84-119-67.compute-1.amazonaws.com",
            "public_ip": "3.84.119.67",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0bd3b7975b10a8805",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-000f471ebc84ca1e7"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09f16c4dfad403c7f",
            "tags": {
              "Name": "Altschool-3",
              "source": "terraform"
            },
            "tags_all": {
              "Name": "Altschool-3",
              "source": "terraform"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-000f471ebc84ca1e7"
            ]
          },
          "dependencies": [
            "aws_security_group.Altschool-load_balancer_sg",
            "aws_security_group.Altschool-security-grp-rule",
            "aws_subnet.Altsch-public-subnet1",
            "aws_vpc.vpc-prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "Altschool_internet_gt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:811661698453:internet-gateway/igw-09ddb6ff7f36d428b",
            "id": "igw-09ddb6ff7f36d428b",
            "owner_id": "811661698453",
            "vpc_id": "vpc-043957832c68a492f"
          },
          "dependencies": [
            "aws_vpc.vpc-prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "Altschool-load-balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:811661698453:loadbalancer/app/Altschool-load-balancer/f4814726df0cfc82",
            "arn_suffix": "app/Altschool-load-balancer/f4814726df0cfc82",
            "desync_mitigation_mode": "defensive",
            "dns_name": "Altschool-load-balancer-21735432.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:811661698453:loadbalancer/app/Altschool-load-balancer/f4814726df0cfc82",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "Altschool-load-balancer",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0fd2a1c5f3570bb1e"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-09f16c4dfad403c7f"
              },
              {
                "subnet_id": "subnet-0ad98116134951e33"
              }
            ],
            "subnets": [
              "subnet-09f16c4dfad403c7f",
              "subnet-0ad98116134951e33"
            ],
            "vpc_id": "vpc-043957832c68a492f",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_instance.Altschool1",
            "aws_instance.Altschool2",
            "aws_instance.Altschool3",
            "aws_security_group.Altschool-load_balancer_sg",
            "aws_security_group.Altschool-security-grp-rule",
            "aws_subnet.Altsch-public-subnet1",
            "aws_subnet.Altsch-public-subnet2",
            "aws_vpc.vpc-prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "Altschool-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:811661698453:listener/app/Altschool-load-balancer/f4814726df0cfc82/2a74898f58877f3b",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:811661698453:targetgroup/Altschool-target-group/80514535078abe3d",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:811661698453:listener/app/Altschool-load-balancer/f4814726df0cfc82/2a74898f58877f3b",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:811661698453:loadbalancer/app/Altschool-load-balancer/f4814726df0cfc82",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_instance.Altschool1",
            "aws_instance.Altschool2",
            "aws_instance.Altschool3",
            "aws_lb.Altschool-load-balancer",
            "aws_lb_target_group.Altschool-target-group",
            "aws_security_group.Altschool-load_balancer_sg",
            "aws_security_group.Altschool-security-grp-rule",
            "aws_subnet.Altsch-public-subnet1",
            "aws_subnet.Altsch-public-subnet2",
            "aws_vpc.vpc-prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "Altschool-listener-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:811661698453:targetgroup/Altschool-target-group/80514535078abe3d",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:811661698453:listener-rule/app/Altschool-load-balancer/f4814726df0cfc82/2a74898f58877f3b/10904166e319f193",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:811661698453:listener-rule/app/Altschool-load-balancer/f4814726df0cfc82/2a74898f58877f3b/10904166e319f193",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:811661698453:listener/app/Altschool-load-balancer/f4814726df0cfc82/2a74898f58877f3b",
            "priority": 1,
            "tags": null,
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_instance.Altschool1",
            "aws_instance.Altschool2",
            "aws_instance.Altschool3",
            "aws_lb.Altschool-load-balancer",
            "aws_lb_listener.Altschool-listener",
            "aws_lb_target_group.Altschool-target-group",
            "aws_security_group.Altschool-load_balancer_sg",
            "aws_security_group.Altschool-security-grp-rule",
            "aws_subnet.Altsch-public-subnet1",
            "aws_subnet.Altsch-public-subnet2",
            "aws_vpc.vpc-prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "Altschool-target-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:811661698453:targetgroup/Altschool-target-group/80514535078abe3d",
            "arn_suffix": "targetgroup/Altschool-target-group/80514535078abe3d",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 15,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:811661698453:targetgroup/Altschool-target-group/80514535078abe3d",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "Altschool-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-043957832c68a492f"
          },
          "dependencies": [
            "aws_vpc.vpc-prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "Altschool-target-group-attachment2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:811661698453:targetgroup/Altschool-target-group/80514535078abe3d-20230204061453119000000007",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:811661698453:targetgroup/Altschool-target-group/80514535078abe3d",
            "target_id": "i-0abdf11b3314947f2"
          },
          "dependencies": [
            "aws_instance.Altschool2",
            "aws_lb_target_group.Altschool-target-group",
            "aws_security_group.Altschool-load_balancer_sg",
            "aws_security_group.Altschool-security-grp-rule",
            "aws_subnet.Altsch-public-subnet2",
            "aws_vpc.vpc-prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "Altschool-target-group-attachment3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:811661698453:targetgroup/Altschool-target-group/80514535078abe3d-20230204061442623700000006",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:811661698453:targetgroup/Altschool-target-group/80514535078abe3d",
            "target_id": "i-0b8b07064c1ba4f2c"
          },
          "dependencies": [
            "aws_instance.Altschool3",
            "aws_lb_target_group.Altschool-target-group",
            "aws_security_group.Altschool-load_balancer_sg",
            "aws_security_group.Altschool-security-grp-rule",
            "aws_subnet.Altsch-public-subnet1",
            "aws_vpc.vpc-prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "Altsch-network_acl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:811661698453:network-acl/acl-04487fe667b7d9c60",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-04487fe667b7d9c60",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "811661698453",
            "subnet_ids": [
              "subnet-09f16c4dfad403c7f",
              "subnet-0ad98116134951e33"
            ],
            "tags": null,
            "tags_all": {},
            "vpc_id": "vpc-043957832c68a492f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.Altsch-public-subnet1",
            "aws_subnet.Altsch-public-subnet2",
            "aws_vpc.vpc-prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Altsch-route-table-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:811661698453:route-table/rtb-00df04487a4df9d71",
            "id": "rtb-00df04487a4df9d71",
            "owner_id": "811661698453",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09ddb6ff7f36d428b",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Altsch-route-table-public"
            },
            "tags_all": {
              "Name": "Altsch-route-table-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-043957832c68a492f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.Altschool_internet_gt",
            "aws_vpc.vpc-prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Altsch-public-subnet1-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ec946f717444ef4f",
            "route_table_id": "rtb-00df04487a4df9d71",
            "subnet_id": "subnet-09f16c4dfad403c7f"
          },
          "dependencies": [
            "aws_internet_gateway.Altschool_internet_gt",
            "aws_route_table.Altsch-route-table-public",
            "aws_subnet.Altsch-public-subnet1",
            "aws_vpc.vpc-prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Altsch-public-subnet2-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-088dcea61103d4576",
            "route_table_id": "rtb-00df04487a4df9d71",
            "subnet_id": "subnet-0ad98116134951e33"
          },
          "dependencies": [
            "aws_internet_gateway.Altschool_internet_gt",
            "aws_route_table.Altsch-route-table-public",
            "aws_subnet.Altsch-public-subnet2",
            "aws_vpc.vpc-prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Altschool-load_balancer_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:811661698453:security-group/sg-0fd2a1c5f3570bb1e",
            "description": "Security group for the load balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "id": "sg-0fd2a1c5f3570bb1e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Altschool-load-balancer-sg",
            "name_prefix": "",
            "owner_id": "811661698453",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-043957832c68a492f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc-prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Altschool-security-grp-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:811661698453:security-group/sg-000f471ebc84ca1e7",
            "description": "Allow SSH, HTTP and HTTPS inbound traffic for private instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-000f471ebc84ca1e7",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0fd2a1c5f3570bb1e"
                ],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0fd2a1c5f3570bb1e"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_ssh_http_https",
            "name_prefix": "",
            "owner_id": "811661698453",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Altschool-security-grp-rule"
            },
            "tags_all": {
              "Name": "Altschool-security-grp-rule"
            },
            "timeouts": null,
            "vpc_id": "vpc-043957832c68a492f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.Altschool-load_balancer_sg",
            "aws_vpc.vpc-prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Altsch-public-subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:811661698453:subnet/subnet-09f16c4dfad403c7f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09f16c4dfad403c7f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "811661698453",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Altsch-public-subnet1"
            },
            "tags_all": {
              "Name": "Altsch-public-subnet1"
            },
            "vpc_id": "vpc-043957832c68a492f"
          },
          "dependencies": [
            "aws_vpc.vpc-prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Altsch-public-subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:811661698453:subnet/subnet-0ad98116134951e33",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ad98116134951e33",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "811661698453",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Altsch-public-subnet2"
            },
            "tags_all": {
              "Name": "Altsch-public-subnet2"
            },
            "vpc_id": "vpc-043957832c68a492f"
          },
          "dependencies": [
            "aws_vpc.vpc-prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc-prod",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:811661698453:vpc/vpc-043957832c68a492f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-04a32f588bd5614e1",
            "default_route_table_id": "rtb-048a82f2506905a32",
            "default_security_group_id": "sg-022c0a83cba330b47",
            "dhcp_options_id": "dopt-0679ea12c0432c052",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-043957832c68a492f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-048a82f2506905a32",
            "owner_id": "811661698453",
            "tags": {
              "Name": "Prod"
            },
            "tags_all": {
              "Name": "Prod"
            }
          }
        }
      ]
    }
  ]
}